Adds -t and --noturns switches
Having some settings in the config and some on the command line is not cool. These new switches override settings when used.

--- a/BattleShip.Game/App.config
+++ b/BattleShip.Game/App.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <!-- printTurns enables/disables the print out of each players individual shot every turn -->
+    <!-- printTurns toggles the output of each players shot every turn -->
     <add key="printTurns" value="True"/>
     <!--
       player1 and player2 specifies the fully qualified type and in which assembly it resides in
