Updates the game to allow of .NET 4.0 AI assmeblies
Previously I had to downgrade the game to target .NET 3.5 since when I first created it 4.0 was only just released (yeah everyone wasn't as fast as I was to install it). But now it was time to get back up in versions. Although I even downgraded BattleShip.Interface to target .NET 2.0 to allow for building AI assemblies with lower versions of the framework. Not very useful perhaps, but it might in the future.. for some reason... maybe?

--- a/Suigetsu/Suijin.csproj
+++ b/Suigetsu/Suijin.csproj
@@ -10,8 +10,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Suijin</RootNamespace>
     <AssemblyName>Suijin</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,14 +32,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
   <ItemGroup>
     <Compile Include="RyujinBattleDrone.cs" />
     <Compile Include="Suigetsu.cs" />
