--- a/BattleShip.Game/App.config
+++ b/BattleShip.Game/App.config
@@ -16,6 +16,6 @@
     <add key="player2" value="Suijin.Suigetsu,Suijin"/>
   </appSettings>
   <startup>
-    <supportedRuntime version="v2.0.50727" sku="Client"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
 </configuration>
